Changelog
=========

10.9-dev0 - (unreleased)
---------------------

10.8 - (2019-01-28)
---------------------
* Jenkins: Add sonarqube step
  [avoinea refs #101552]

10.7 - (2019-01-17)
---------------------
* Feature: fully serve OpenLayers over HTTPS
  [alecghica refs #101256]
* Feature: serve OpenLayers tiles stored locally
  [alecghica refs #101256]
* Bug fix: fixed loading of resources from grips skin folder
  [alecghica refs #101256]

10.6 - (2018-09-05)
---------------------
* Bug fix: Fixed map behaviour when it's mandatorry, but nothing was selected, and trying to saved
  [szabozo0 refs #97571]
* Cleanup: Remove obsolete FormlibGeotagWidget
  [avoinea refs #98073]

10.5 - (2018-08-31)
---------------------
* Feature: Add EEA 39 to country groups in geo tagging interface
  [avoinea refs #87954]

10.4 - (2018-07-27)
---------------------
* Bug fix: The id "++resource++eea.geotags.static" contains characters illegal in URLs.
  [avoinea refs #97380]

10.3 - (2018-07-11)
---------------------
* Cleanup: Remove Products.ATVocabularyManager dependency
  [avoinea refs #97067]
* Change: Added missing country groups (EU33, EU28, etc.)
  [avoinea refs #97067]

10.2 - (2018-07-11)
---------------------
* Bug fix: Fixed Mixed Content by loading openlayers API over https
  [avoinea refs #96619]

10.1 - (2018-07-10)
---------------------
* Bug fix: Fixed Mixed Content by loading openlayers API over https
  [avoinea refs #96619]

10.0 - (2018-07-04)
-------------------
* Upgrade step: "Plone > Site setup > Add-ons" upgrade eea.geotags
  [avoinea refs #95147]
* Upgrade step: "Plone > Site setup > EEA Geotags Settings" add/remove Google Maps API key and Geonames username
  [avoinea refs #95147]
* Change: Fallback to Open Street Map if no Google API Key provided
  [avoinea refs #95147]
* Change: updated URLs pointing to eea.europa.eu with https://
  [alecghica refs #95849]

9.3 - (2018-03-14)
------------------
* Change: fixed issues reported for assessment edit pages