@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <metadata>
  <description>EEA Geotags profile</description>
- <version>10.5</version>
+ <version>10.9</version>
  <dependencies>
   <dependency>profile-eea.alchemy:default</dependency>
   <dependency>profile-eea.jquery:13-splitter</dependency>
